--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "express-async-errors": "^3.1.1",
     "helmet": "^3.22.0",
     "knex": "^0.21.1",
+    "multer": "^1.4.2",
     "sqlite3": "^4.2.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/helmet": "^0.0.47",
+    "@types/multer": "^1.4.3",
     "@typescript-eslint/eslint-plugin": "^3.1.0",
     "@typescript-eslint/parser": "^3.1.0",
     "eslint": "^6.8.0",
