--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 APP_URL=http://localhost
 APP_PORT=3333
 
-DOCS_URL=
+NODE_ENV=development
+
+DOCS_URL=https://github.com/DiegoVictor/ecoleta-api#errors-reference
