--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "build": "tsc",
     "dev:server": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
     "knex:migrate": "knex migrate:latest --knexfile knexfile.ts",
-    "knex:seed": "knex seed:run --knexfile knexfile.ts"
+    "knex:seed": "knex seed:run --knexfile knexfile.ts",
+    "test": "jest --runInBand"
   },
   "license": "MIT",
   "dependencies": {
@@ -24,6 +25,7 @@
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/helmet": "^0.0.47",
+    "@types/jest": "^26.0.19",
     "@types/multer": "^1.4.3",
     "@typescript-eslint/eslint-plugin": "^3.1.0",
     "@typescript-eslint/parser": "^3.1.0",
@@ -32,7 +34,9 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.3",
+    "jest": "^26.6.3",
     "prettier": "^2.0.5",
+    "ts-jest": "^26.4.4",
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.9.3"
