--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
   "devDependencies": {
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
+    "@types/factory-girl": "^5.0.2",
+    "@types/faker": "^5.1.5",
     "@types/helmet": "^0.0.47",
     "@types/jest": "^26.0.19",
     "@types/multer": "^1.4.3",
+    "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^3.1.0",
     "@typescript-eslint/parser": "^3.1.0",
     "eslint": "^6.8.0",
@@ -34,8 +37,11 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.3",
+    "factory-girl": "^5.0.4",
+    "faker": "^5.1.0",
     "jest": "^26.6.3",
     "prettier": "^2.0.5",
+    "supertest": "^6.0.1",
     "ts-jest": "^26.4.4",
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.44",
