--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/jest": "^26.0.19",
     "@types/multer": "^1.4.3",
     "@types/supertest": "^2.0.10",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^3.1.0",
     "@typescript-eslint/parser": "^3.1.0",
     "eslint": "^6.8.0",
@@ -42,6 +43,7 @@
     "jest": "^26.6.3",
     "prettier": "^2.0.5",
     "supertest": "^6.0.1",
+    "swagger-ui-express": "^4.1.6",
     "ts-jest": "^26.4.4",
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.44",
