--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "sqlite3": "^5.0.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.0.1",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/factory-girl": "^5.0.2",
-    "@types/faker": "^5.1.5",
     "@types/helmet": "^0.0.47",
     "@types/jest": "^26.0.19",
     "@types/multer": "^1.4.3",
@@ -39,7 +39,6 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.3",
     "factory-girl": "^5.0.4",
-    "faker": "^5.1.0",
     "jest": "^26.6.3",
     "prettier": "^2.0.5",
     "supertest": "^6.0.1",
