--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "sqlite3": "^5.0.0"
   },
   "devDependencies": {
-    "@faker-js/faker": "^7.0.1",
+    "@faker-js/faker": "^7.1.0",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/factory-girl": "^5.0.2",
     "@types/helmet": "^0.0.47",
-    "@types/jest": "^26.0.19",
+    "@types/jest": "^27.5.1",
     "@types/multer": "^1.4.3",
     "@types/supertest": "^2.0.10",
     "@types/swagger-ui-express": "^4.1.3",
@@ -39,13 +39,13 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.3",
     "factory-girl": "^5.0.4",
-    "jest": "^26.6.3",
+    "jest": "^28.1.0",
     "prettier": "^2.0.5",
     "supertest": "^6.0.1",
     "swagger-ui-express": "^4.1.6",
-    "ts-jest": "^26.4.4",
-    "ts-node": "^8.10.2",
-    "ts-node-dev": "^1.0.0-pre.44",
-    "typescript": "^3.9.3"
+    "ts-jest": "^28.0.3",
+    "ts-node": "^10.8.0",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.7.2"
   }
 }
