--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,18 @@
 version: 2.1
 orbs:
+  node: circleci/node@5.0.2
   codecov: codecov/codecov@1.1.1
 jobs:
-  build:
-    docker:
-      - image: circleci/node:16
+  test:
+    executor: node/default
     steps:
       - checkout
-      - run: npm install
-      - run: npm test
+      - node/install-packages:
+          cache-path: ~/ecoleta-api/node_modules
+      - run: npm run test
       - codecov/upload:
           file: tests/coverage/*.json
 workflows:
-  build:
+  test:
     jobs:
-      - build
+      - test
