--- a/package.json
+++ b/package.json
@@ -10,42 +10,42 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@hapi/boom": "^9.1.0",
-    "celebrate": "^12.1.1",
+    "@hapi/boom": "^10.0.1",
+    "celebrate": "^15.0.1",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
+    "dotenv": "^16.3.1",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
-    "helmet": "^3.22.0",
-    "knex": "^0.21.1",
-    "multer": "^1.4.2",
+    "helmet": "^7.0.0",
+    "knex": "^2.5.1",
+    "multer": "^1.4.5-lts.1",
     "sqlite3": "^5.0.0"
   },
   "devDependencies": {
-    "@faker-js/faker": "^7.1.0",
+    "@faker-js/faker": "^8.0.2",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/factory-girl": "^5.0.2",
-    "@types/helmet": "^0.0.47",
-    "@types/jest": "^27.5.1",
+    "@types/helmet": "^4.0.0",
+    "@types/jest": "^29.5.4",
     "@types/multer": "^1.4.3",
     "@types/supertest": "^2.0.10",
     "@types/swagger-ui-express": "^4.1.3",
-    "@typescript-eslint/eslint-plugin": "^3.1.0",
-    "@typescript-eslint/parser": "^3.1.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-config-prettier": "^6.11.0",
+    "@typescript-eslint/eslint-plugin": "^6.5.0",
+    "@typescript-eslint/parser": "^6.5.0",
+    "eslint": "^8.48.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-prettier": "^5.0.0",
     "factory-girl": "^5.0.4",
-    "jest": "^28.1.0",
-    "prettier": "^2.0.5",
+    "jest": "^29.6.4",
+    "prettier": "^3.0.3",
     "supertest": "^6.0.1",
-    "swagger-ui-express": "^4.1.6",
-    "ts-jest": "^28.0.3",
+    "swagger-ui-express": "^5.0.0",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.8.0",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.7.2"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.2.2"
   }
 }
